8301306: java/net/httpclient/* fail with -Xcomp